--- a/prepros-6.config
+++ b/prepros-6.config
@@ -29,12 +29,12 @@
       "path": "scss/style.scss",
       "imports": [
         "scss/_variables.scss",
-        "scss/_mixins.scss",
         "scss/_bootstrap-theaming.scss",
         "scss/_common.scss",
         "scss/_header-navbar.scss",
         "scss/_main.scss",
-        "scss/_footer.scss"
+        "scss/_footer.scss",
+        "scss/_media.scss"
       ]
     }
   ],
